--- a/src/styles/GameLearningPage.css
+++ b/src/styles/GameLearningPage.css
@@ -4,6 +4,7 @@
 }
 
 .game-content {
+  padding-top: 52px;
   margin-left: 220px;
   padding: 40px 20px;
 }
@@ -108,6 +109,7 @@
 
 @media (max-width: 768px) {
   .game-content {
+  padding-top: 52px;
     margin-left: 0;
   }
   
@@ -268,8 +270,12 @@
 
 @media (max-width: 768px) {
   .game-content {
+  padding-top: 52px;
     margin-left: 0;
     padding-bottom: 72px;
   }
 }
+
+
+
 
