--- a/src/styles/RevisionPage.css
+++ b/src/styles/RevisionPage.css
@@ -4,6 +4,7 @@
 }
 
 .revision-content {
+  padding-top: 52px;
   margin-left: 220px;
   padding: 40px 20px;
 }
@@ -81,6 +82,7 @@
 
 @media (max-width: 768px) {
   .revision-content {
+  padding-top: 52px;
     margin-left: 0;
   }
   
@@ -92,8 +94,11 @@
 
 @media (max-width: 768px) {
   .revision-content {
+  padding-top: 52px;
     margin-left: 0;
     padding-bottom: 72px;
   }
 }
+
+
 
