--- a/src/styles/RoadmapPage.css
+++ b/src/styles/RoadmapPage.css
@@ -4,6 +4,7 @@
 }
 
 .roadmap-content {
+  padding-top: 52px;
   margin-left: 220px;
   padding: 40px 20px;
 }
@@ -91,6 +92,7 @@
 
 @media (max-width: 768px) {
   .roadmap-content {
+  padding-top: 52px;
     margin-left: 0;
   }
   
@@ -166,8 +168,11 @@
 
 @media (max-width: 768px) {
   .roadmap-content {
+  padding-top: 52px;
     margin-left: 0;
     padding-bottom: 72px;
   }
 }
+
+
 
